(lang dune 1.10)
(generate_opam_files true)

(license "LGPL-3.0-or-later")
(authors "Ian Denhardt <ian@zenhack.net>")
(maintainers "Ian Denhardt <ian@zenhack.net>")
(source (uri "https://gitlab.com/isd/mule"))
(bug_reports "https://gitlab.com/isd/mule/issues")
(homepage "https://gitlab.com/isd/mule")

(package
  (name mule))

(package
  (name libmule))

(package
  (name unionFindExtra))

(package
  (name tsort))

(package
  (name mule-stdlib))
