(include_subdirs unqualified)

(rule
  (targets js_runtime_gen.ml)
  (deps
    (:gen ../gen-js-runtime/gen.exe)
    (:runtime ./runtime.js))
  (action (run %{gen} %{runtime} %{targets})))

(library
  (name libmule)
  (public_name libmule)
  (flags (:standard -open Base))
  (libraries
    base
    lwt
    lwt.unix
    mparser
    topological_sort
    yojson
    zarith

    cmdliner)
  (preprocess (pps ppx_sexp_conv ppx_let lwt_ppx)))
