(include_subdirs unqualified)

(rule
  (targets js_runtime_gen.ml)
  (deps
    (:gen ../gen-js-runtime/gen.exe)
    (:runtime ./runtime.js))
  (action (run %{gen} %{runtime} %{targets})))

(library
  (name libmule)
  (public_name libmule)
  (flags (:standard -open Base))
  (libraries
    ;; Elsewhere in this repo:
    unionFind
    tsort

    base
    stdio
    lwt
    lwt.unix
    mparser
    yojson
    zarith
    cmdliner)
  (inline_tests)
  (preprocess
    (pps
      ppx_inline_test
      ppx_sexp_conv
      ppx_let
      lwt_ppx)))
